Fixed store layout bug on iphone safari

--- a/Store/CSS/Default_Store_Styles.css
+++ b/Store/CSS/Default_Store_Styles.css
@@ -54,6 +54,11 @@ ul {
     padding: 0;
 }
 
+p,
+h1 {
+	color: white;
+}
+
 
 /* Header (nav) */
 
@@ -202,22 +207,23 @@ ul {
     z-index: 9;
 }
 
-#fullpage section {
-    height: 100vh;
-    margin: 0;
-    position: relative;
-    display: flex;
-    flex-direction: column;
+.fp-table {
+	justify-content: start;
 }
 
-section article {
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    text-align: center;
-    z-index: 10;
+#fullpage section {
+	z-index: 10;
+	margin: 0;
+}
+
+section h1 {
+	font-size: 32px;
+	margin-top: 36vh;
+	color: #f59c1e;
+}
+
+section.title {
+	text-align: center;
 }
 
 #About {
@@ -343,6 +349,11 @@ footer ul {
         font-size: 7vw;
         color: white;
         margin-top: 33vh;
+    }
+    section h1 {
+        font-size: 36px;
+        margin-top: 36vh;
+        color: #f59c1e;
     }
     /* footer */
     #social {
