--- a/Store/CSS/store.css
+++ b/Store/CSS/store.css
@@ -19,7 +19,7 @@ This code is licensed under MIT license (See LICENSE.txt for details)
 
 
 /* content */
-
+/* cart */
 .cart button {
     display: inline-block;
     border-radius: 4px;
@@ -51,36 +51,37 @@ This code is licensed under MIT license (See LICENSE.txt for details)
     transition: 0.5s;
 }
 
-section article #itemImg {
+
+/* product */
+section article .itemImg {
     height: 52vh;
     padding-top: 30vh;
 }
 
+section .itemImg {
+	margin-top: 30vh;
+	text-align: center;
+}
+
+section .itemImg img {
+	height: 160px;
+}
+
 .itemInfo {
-    position: absolute;
-    left: 0;
-    width: 100%;
-    height: 10vh;
+	position: absolute;
+	width: 92%;
+	left: 4%;
+	right: 4%;
+	bottom: 0;
+	text-align: center;
 }
 
-.itemInfo p {
-    color: white;
-    font-size: 18px;
-    margin: 0;
-}
-
-#itemImg img {
-    width: 100%;
-    max-width: 480px;
-    height: auto;
-    vertical-align: baseline;
-}
-
-#itemImg figure {
+.itemImg figure {
     position: relative;
+    overflow: hidden;
 }
 
-#itemImg figure::before {
+.itemImg figure::before {
     position: absolute;
     top: 0;
     left: -75%;
@@ -95,14 +96,11 @@ section article #itemImg {
     transform: skewX(-25deg);
 }
 
-#itemImg figure:hover::before {
+.itemImg figure:hover::before {
     -webkit-animation: shine .75s;
     animation: shine .75s;
 }
-.product {
-    width: 100%;
-    height: 100vh;
-}
+
 
 /* Tablet Layout: 481px to 777px. Inherits styles from: Mobile Layout. */
 
@@ -111,9 +109,9 @@ section article #itemImg {
         bottom: 3vh;
         position: relative;
     }
-    section article #itemImg {
+    section .itemImg {
         height: 56vh;
-        padding-top: 30vh;
+        margin-top: 30vh;
     }
 }
 
@@ -130,22 +128,22 @@ section article #itemImg {
         width: 100%;
         height: 100vh;
     }
-    #itemImg img {
+    .itemImg img {
         width: 60%;
         max-width: 700px;
         height: auto;
     }
     .itemInfo {
+        position: absolute;
         width: 92%;
         left: 4%;
         right: 4%;
         bottom: 0;
         text-align: start;
     }
-    section article #itemImg {
-        height: 62vh;
-        padding-top: 30vh;
-    }
+	section .itemImg img {
+		height: 400px;
+	}
     .itemInfo p {
         font-size: 20px;
     }
